# rust-ffi-cpp

./: Cargo.toml
lib/ffi_cpp/: Cargo.toml  build.rs
lib/ffi_cpp/src/: bindings.rs  lib.rs
lib/ffi_cpp/src/cpp/: CMakeLists.txt  example.cpp
src/: main.rs
